[fix] hard,soft tag flex-wrap: wrap added & AddReview authorization added

--- a/client/src/pages/mypage/Profile.module.css
+++ b/client/src/pages/mypage/Profile.module.css
@@ -84,12 +84,14 @@
 .hardContent {
   margin-top: 16px;
   display: flex;
+  flex-wrap: wrap;
   gap: 8px;
 }
 
 .softContent {
   margin-top: 16px;
   display: flex;
+  flex-wrap: wrap;
   gap: 8px;
 }
 
